...
          marginBottom: -2,
        },
      }}
    >
      <Tabs.Screen
        name="index"
        testID="tab-home"
        options={{
          title: 'Home',
          tabBarIcon: ({ color, focused }) => (
            <SimpleLineIcons 
              size={ICON_SIZE} 
              name="home" 
...
