...
            fullWidth={false}
          />

          <View style={styles.secondaryButtonsRow}>
            <View style={{ flex: 1 }}>
              <BaseButton
                testID={'btn-login'}
                title="Login"
                onPress={handleLogin}
                disabled={false}
                variant="outline"
                fullWidth={false}
              />
...
