appId: com.bitpixelbd.speakingmate
name: Android Login

# Login flow with Expo launch handling
---
- launchApp:
    clearState: true
# - runFlow:
#     when:
#       visible: http://localhost:8081
#     commands:
#       - tapOn: http://localhost:8081
# - runFlow:
#     when:
#       visible: Continue
#     commands:
#       - tapOn: Continue
# - swipe:
#     direction: DOWN

- assertVisible:
    id: btn-login
- tapOn:
    id: btn-login

- assertVisible:
    id: input-email
- tapOn:
    id: input-email

- inputText: user3@email.com
- assertVisible:
    id: input-password
- tapOn:
    id: input-password
- inputText: 123456
- tapOn:
    id: btn-submit-login
- assertVisible:
    id: tab-home